@@ -318,6 +318,9 @@ The following classes and functions are available:
     bf(FBB::Selector): Offers timed delays and multiple file I/O. nl()
     Manpage(selector)
 
+    bf(FBB::Semaphore): Dijkstra's (1962) Semaphore data type.nl()
+    Manpage(semaphore)
+
     bf(FBB::ServerSocket): defines a socket to which clients can connect.nl()
     Manpage(serversocket)
 
@@ -434,7 +437,7 @@ categories are offered:
     it() bf(INTERNET / NETWORKING)
     it() bf(OPENSSL AND ENCRYPTION)
     it() bf(PATTERN MATCHING)
-    it() bf(PROCESSES AND SIGNALS)
+    it() bf(PROCESSES, SIGNALS, THREADS)
     it() bf(STREAMS AND FILES)
     it() bf(SHARED MEMORY)
     it() bf(TABLES)
@@ -637,7 +640,7 @@ categories are offered:
 
 
 
-    it() bf(PROCESSES AND SIGNALS)
+    it() bf(PROCESSES, SIGNALS, THREADS)
 
     bf(FBB::Fork): Defines bf(fork)(2) as part of a Template Algorithm Design
     Pattern. nl()
@@ -647,9 +650,13 @@ categories are offered:
     child processes. nl()
     Manpage(process)
 
+    bf(FBB::Semaphore): Dijkstra's (1962) Semaphore data type.nl()
+    Manpage(semaphore)
+
     bf(FBB::Signal): Defines signals, allowing signal handlers to use object's
     data members c.q. to call object's members functions. nl()
     Manpage(signal)
+
 
 
     it() bf(STREAMS AND FILES)
