@@ -36,7 +36,6 @@ class Semaphore
         size_t size() const;
 };
 
-#include "set.f"
 #include "size.f"
 #include "waitfor.f"
 #include "waituntil.f"
