@@ -1,6 +1,0 @@
-#include "semaphore.ih"
-
-inline void Semaphore::set(size_t available)
-{
-    d_nAvailable = available;
-}
