@@ -1,5 +1,5 @@
 template <typename Clock, typename Duration>  // wait until abs. time
-std::cv_status Semaphore::wait_until(chrono::time_point<Clock, Duration> 
+std::cv_status Semaphore::wait_until(std::chrono::time_point<Clock, Duration> 
                                      const &absTime) 
 {
     std::unique_lock<std::mutex> lk(d_mutex);   // get the lock
