@@ -1,8 +1,9 @@
 bobcat (3.24.00)
 
-  * Added new class Semaphore
+  * Added new class Semaphore, implementing Dijkstra's (1962) Semaphore data
+    type. 
 
-
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 28 Jan 2015 11:24:11 +0100
 
 bobcat (3.23.01)
 
